# pozos

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.old/: mm.c
cmake/: toolchain-common.cmake
cmake/arch/riscv64/: toolchain.cmake
examples/: CMakeLists.txt
examples/hello/: CMakeLists.txt  main.c
kern/: CMakeLists.txt  console.c  init.c  kalloc.c  kernel.c  mm.c  printf.c  printf.h  sched.c  start.S  string.c  uart.c  utils.c
kern/arch/riscv64/: CMakeLists.txt  console.c  encoding.h  init.c  linker.ld  mm.c  sbi.h  start.S  utils.c
kern/arch/riscv64/include/kern/arch/: console.h  init.h  intrin.h  mm.h  sysdef.h  utils.h
kern/include/kern/: init.h  kalloc.h  kernel.h  mm.h  sched.h  string.h  sysdef.h  uart.h  utils.h
tools/: do-clang-format.sh  qemu-run.sh
